[gd_scene load_steps=12 format=3 uid="uid://d1bqjmgvhlh7p"]

[ext_resource type="Script" uid="uid://ddboeb88t4pvk" path="res://scripts/levels_2.0.gd" id="1_qewaf"]
[ext_resource type="Texture2D" uid="uid://x44u7k42ry25" path="res://assets/KenoStuff/level1.PNG" id="2_c1c67"]
[ext_resource type="FontFile" uid="uid://ccimawtc2hstw" path="res://PixelOperator8-Bold.ttf" id="2_cnmo0"]
[ext_resource type="Texture2D" uid="uid://b8nas5b508q8c" path="res://assets/KenoStuff/level2.PNG" id="4_6xou3"]
[ext_resource type="Theme" uid="uid://drrsrm2wiat7u" path="res://assets/own/buttonnew.tres" id="4_8bswv"]
[ext_resource type="Texture2D" uid="uid://dw74f51a2lhuu" path="res://assets/KenoStuff/sprite4a.PNG" id="5_8bswv"]
[ext_resource type="Texture2D" uid="uid://cwonkpce5xa7l" path="res://assets/cursornormal.png" id="5_crxt8"]
[ext_resource type="FontFile" uid="uid://0nyawcbtrbur" path="res://assets/fonts/PixelOperator8.ttf" id="5_id3ju"]
[ext_resource type="Texture2D" uid="uid://by7bjlivst8nn" path="res://assets/KenoStuff/level4.PNG" id="6_id3ju"]
[ext_resource type="FontFile" uid="uid://u8ua5l8rh47k" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="6_ppdqf"]
[ext_resource type="Texture2D" uid="uid://cya1iq3h5r13f" path="res://assets/KenoStuff/bonus.PNG" id="7_ppdqf"]

[node name="HScrollBar" type="HScrollBar"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
max_value = 0.0
script = ExtResource("1_qewaf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = -2315.0
offset_right = 5773.0
offset_bottom = 648.0
mouse_filter = 0

[node name="TextureRect7" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_c1c67")

[node name="Label" type="Label" parent="HBoxContainer/TextureRect7"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 48.0
offset_right = 200.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_cnmo0")
theme_override_font_sizes/font_size = 64
text = "Online"

[node name="Button" type="Button" parent="HBoxContainer/TextureRect7"]
layout_mode = 0
offset_left = 144.0
offset_top = 220.0
offset_right = 212.0
offset_bottom = 254.0
scale = Vector2(2.38006, 2.38006)
theme = ExtResource("4_8bswv")
theme_override_fonts/font = ExtResource("5_id3ju")
text = "Host"

[node name="Button2" type="Button" parent="HBoxContainer/TextureRect7"]
layout_mode = 0
offset_left = 755.0
offset_top = 220.0
offset_right = 823.0
offset_bottom = 254.0
scale = Vector2(2.38006, 2.38006)
theme = ExtResource("4_8bswv")
theme_override_fonts/font = ExtResource("5_id3ju")
text = "Join"

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/TextureRect7"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(28.7697, 16.167)
color = Color(0.223529, 0.223529, 0.223529, 0.690196)

[node name="Label2" type="Label" parent="HBoxContainer/TextureRect7"]
layout_mode = 0
offset_left = 210.0
offset_top = 407.0
offset_right = 520.0
offset_bottom = 430.0
scale = Vector2(2.35775, 3.55002)
theme_override_fonts/font = ExtResource("6_ppdqf")
text = "Currently Unavailable"

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_c1c67")

[node name="Label" type="Label" parent="HBoxContainer/TextureRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 48.0
offset_right = 200.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_cnmo0")
theme_override_font_sizes/font_size = 64
text = "Local"

[node name="TextureRect6" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_c1c67")

[node name="Label" type="Label" parent="HBoxContainer/TextureRect6"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 48.0
offset_right = 200.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_cnmo0")
theme_override_font_sizes/font_size = 64
text = "Level 1"

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_6xou3")

[node name="Label" type="Label" parent="HBoxContainer/TextureRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 48.0
offset_right = 200.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_cnmo0")
theme_override_font_sizes/font_size = 64
text = "Level 2"

[node name="TextureRect4" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_8bswv")

[node name="Label" type="Label" parent="HBoxContainer/TextureRect4"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 48.0
offset_right = 200.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_cnmo0")
theme_override_font_sizes/font_size = 64
text = "Level 3"

[node name="TextureRect5" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_id3ju")

[node name="Label" type="Label" parent="HBoxContainer/TextureRect5"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 48.0
offset_right = 200.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_cnmo0")
theme_override_font_sizes/font_size = 64
text = "Level 4"

[node name="TextureRect3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("7_ppdqf")

[node name="Label" type="Label" parent="HBoxContainer/TextureRect3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 48.0
offset_right = 200.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_cnmo0")
theme_override_font_sizes/font_size = 64
text = "Bonus"

[node name="button_right" type="Button" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1144.0
offset_top = -60.0
offset_right = 1258.0
offset_bottom = 54.0
grow_vertical = 2
rotation = 1.5708
icon = ExtResource("5_crxt8")
expand_icon = true

[node name="button_left" type="Button" parent="."]
z_index = 3
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 52.0
offset_right = 114.0
offset_bottom = 166.0
grow_vertical = 2
rotation = -1.5708
icon = ExtResource("5_crxt8")
expand_icon = true

[node name="Button_play" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -36.0
offset_right = 164.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0.682353, 1, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cnmo0")
theme_override_font_sizes/font_size = 64
text = "START"

[connection signal="pressed" from="button_right" to="." method="_on_button_right_pressed"]
[connection signal="pressed" from="button_left" to="." method="_on_button_left_pressed"]
[connection signal="pressed" from="Button_play" to="." method="_on_button_play_pressed"]
